Fix spacing in photo source

--- a/styles.css
+++ b/styles.css
@@ -6,7 +6,6 @@
 * {
     margin: 0;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    border: 2px solid red;
 }
 
 /*border: 2px solid red;*/
@@ -46,9 +45,10 @@
 .hero-photo-source {
     font-size: small;
     font-weight: normal;
+    width: 100%;
     margin-top: 90%;
-    display: flex;
-    justify-content: center;
+    display: inline-block;
+    text-align: center;
 }
 
 .hero-photo-source:nth-of-type(1)>a {
